plugins {
    id 'maven-publish'
    id 'java-library'
    id 'idea'
    id 'java'
}
group 'com.github.rosjava'
version = '0.3.1-SNAPSHOT'
description = 'A pure java version of actionlib'
sourceCompatibility = 11

repositories {
    repositories {
        mavenLocal()
        mavenCentral()
        jcenter()
        maven {
            url "https://github.com/rosjava/rosjava_mvn_repo/raw/master"
        }
    }
}


dependencies {

    implementation group: 'org.ros.rosjava_bootstrap', name: 'message_generation', version: '0.3.3'

    compile 'org.ros.rosjava_core:rosjava:[0.3,0.4)'

    compile 'org.ros.rosjava_messages:actionlib_msgs:1.12.5'
    compile 'org.ros.rosjava_messages:actionlib:1.11.5'
    compile 'org.ros.rosjava_messages:std_msgs:0.5.10'

    implementation 'org.apache.directory.studio:org.apache.commons.logging:1.1.3'
    implementation 'com.google.guava:guava:27.1-jre'

    implementation 'org.apache.commons:commons-lang3:3.4'
    implementation 'org.apache.commons:commons-collections4:4.1'
    implementation 'org.apache.commons:commons-configuration2:2.3'

    //During testing use the Log4j2 logging
    testCompile 'org.apache.logging.log4j:log4j-core:2.13.1'
    testCompile 'org.apache.logging.log4j:log4j-jcl:2.13.1'

    testCompile 'junit:junit:4.12'
    testCompile 'org.ros.rosjava_messages:actionlib_tutorials:0.1.10'
    testCompile 'org.ros.rosjava_messages:turtle_actionlib:0.1.10'

}


jar {
    manifest {
        version = project.version
    }
}
